--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "mongoose-multitenant",
+  "name": "mongo-multitenant",
   "version": "0.0.1",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/main.js",
   "scripts": {
+    "build": "tsc -p .",
     "test": "NODE_ENV=test jest",
     "test:watch": "yarn test --watch ",
     "test:staged": "yarn test --findRelatedTests --silent",
@@ -11,15 +12,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/henriquesml/mongoose-multitenant.git"
+    "url": "git+https://github.com/henriquesml/mongo-multitenant.git"
   },
   "keywords": [],
   "author": "Henrique Schmeller",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/henriquesml/mongoose-multitenant/issues"
+    "url": "https://github.com/henriquesml/mongo-multitenant/issues"
   },
-  "homepage": "https://github.com/henriquesml/mongoose-multitenant#readme",
+  "homepage": "https://github.com/henriquesml/mongo-multitenant#readme",
   "peerDependencies": {
     "mongoose": "^6.0.12"
   },
