--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "downlevelIteration": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "src/*.spec.ts"],
+  "exclude": ["node_modules", "dist", "src/**/*.spec.ts"],
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS",
