--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "test": "NODE_ENV=test jest",
     "test:watch": "yarn test --watch ",
     "test:staged": "yarn test --findRelatedTests --silent",
-    "test:ci": "yarn test --coverage --silent"
+    "test:ci": "yarn test --coverage --silent",
+    "clean": "rm -rf dist/",
+    "prepublishOnly": "npm run clean && npm run build",
+    "pub": "npm publish"
   },
   "repository": {
     "type": "git",
