--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "mongo-multitenant",
   "version": "0.0.2",
   "description": "",
-  "main": "dist/main.js",
+  "main": "dist/index.js",
+  "files": [
+    "dist/**"
+  ],
   "scripts": {
-    "build": "tsc -p .",
+    "build": "rollup -c",
     "test": "NODE_ENV=test jest",
     "test:watch": "yarn test --watch ",
     "test:staged": "yarn test --findRelatedTests --silent",
@@ -28,6 +31,7 @@
     "mongoose": "^6.0.12"
   },
   "devDependencies": {
+    "@rollup/plugin-json": "^4.1.0",
     "@shelf/jest-mongodb": "^2.1.0",
     "@types/faker": "^5.5.9",
     "@types/jest": "^27.0.2",
@@ -35,7 +39,16 @@
     "faker": "^5.5.3",
     "jest": "^27.3.1",
     "mongoose": "^6.0.12",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.31.2",
+    "rollup-plugin-url": "^3.0.1",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "rollup": "^2.70.1"
   }
 }
