setting a mongoose fixed version

--- a/example/package.json
+++ b/example/package.json
@@ -7,7 +7,7 @@
     "start": "node src/api.js"
   },
   "dependencies": {
-    "mongoose": "^6.0.12",
+    "mongoose": "6.0.12",
     "cors": "^2.8.5",
     "express": "^4.17.3"
   }
