--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "homepage": "https://github.com/henriquesml/mongo-multitenant#readme",
   "peerDependencies": {
-    "mongoose": "^6.0.12"
+    "mongoose": "6.0.12"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
@@ -38,7 +38,7 @@
     "@types/node": "^16.11.1",
     "faker": "^5.5.3",
     "jest": "^27.3.1",
-    "mongoose": "^6.0.12",
+    "mongoose": "6.0.12",
     "rollup": "^2.70.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
