--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,11 +13,12 @@
     "noImplicitAny": true,
     "strictFunctionTypes": true,
     "strictNullChecks": true,
-    "strictPropertyInitialization": true,
+    "strictPropertyInitialization": false,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "downlevelIteration": true
+
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "src/**/*.spec.ts"],
