create publish versions scripts

--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "test:ci": "yarn test --coverage --silent",
     "clean": "rm -rf dist/",
     "prepublishOnly": "yarn clean && yarn build",
-    "pub": "yarn login && yarn publish"
+    "pub": "yarn login && yarn publish",
+    "pub:major": "yarn login && version major",
+    "pub:minor": "yarn login && version minor",
+    "pub:patch": "yarn login && version patch"
   },
   "repository": {
     "type": "git",
