--- a/package.json
+++ b/package.json
@@ -31,17 +31,17 @@
   },
   "homepage": "https://github.com/henriquesml/mongo-multitenant#readme",
   "peerDependencies": {
-    "mongoose": "6.0.12"
+    "mongoose": "6.x"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
     "@shelf/jest-mongodb": "^2.1.0",
-    "@types/faker": "^5.5.9",
+    "@types/faker": "^6.6.9",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.1",
-    "faker": "^5.5.3",
-    "jest": "^27.3.1",
-    "mongoose": "6.0.12",
+    "@types/node": "^17.0.34",
+    "faker": "^6.6.6",
+    "jest": "^28.1.0",
+    "mongoose": "6.3.3",
     "rollup": "^2.70.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -49,7 +49,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.2",
     "rollup-plugin-url": "^3.0.1",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.4.4"
+    "ts-jest": "^28.0.2",
+    "typescript": "^4.6.4"
   }
 }
