--- a/package.json
+++ b/package.json
@@ -28,11 +28,10 @@
     "mongoose": "^6.0.12"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.3.1",
     "@shelf/jest-mongodb": "^2.1.0",
-    "@types/faker": "^5.5.9",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.1",
-    "faker": "^5.5.3",
     "jest": "^27.3.1",
     "mongoose": "^6.0.12",
     "ts-jest": "^27.0.7",
